Removed web part and leaving only api for configuration
