# docs/swagger.json
@@ -15,59 +15,6 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/auth/token": {
-            "post": {
-                "description": "Create a token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Authenticate client",
-                "deprecated": true,
-                "parameters": [
-                    {
-                        "description": "ClientInput",
-                        "name": "dto.ClientInput",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ClientInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/dto.ResponseHTTP"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "503": {
-                        "description": "Service Unavailable",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseHTTP"
-                        }
-                    }
-                }
-            }
-        },
         "/settings/subscribers": {
             "get": {
                 "security": [
@@ -97,7 +44,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.Subscriber"
+                                                "$ref": "#/definitions/settings.Subscriber"
                                             }
                                         }
                                     }
@@ -152,7 +99,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.Subscriber"
+                                                "$ref": "#/definitions/settings.Subscriber"
                                             }
                                         }
                                     }
@@ -171,14 +118,6 @@
         }
     },
     "definitions": {
-        "dto.ClientInput": {
-            "type": "object",
-            "properties": {
-                "appKey": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.ResponseHTTP": {
             "type": "object",
             "properties": {
@@ -202,7 +141,7 @@
                 }
             }
         },
-        "model.Subscriber": {
+        "settings.Subscriber": {
             "type": "object",
             "properties": {
                 "apiaryId": {
